--- a/d00/ex03/responsive.css
+++ b/d00/ex03/responsive.css
@@ -17,6 +17,7 @@ td {
 }
 
 td h2 {
+    font-size: 2vh;
     text-align: center;
 }
 
@@ -44,7 +45,7 @@ td h2 {
 .purple{background-color: rgba(108, 90, 138, 0.616);}
 .orange{background-color: rgba(168, 140, 78, 0.616);}
 
-@media screen and (min-width: 200px) and (max-width: 640px) {
+@media screen and (min-width: 100px) and (max-width: 640px) {
     h1 {
         text-align: center;
         font-size: 20px;
