--- a/d00/ex03/responsive.css
+++ b/d00/ex03/responsive.css
@@ -6,8 +6,18 @@ html {
     background-size: cover;
 }
 
+.title {
+    color: white;
+    text-align: center;
+    font-size: 1.1vh;
+    font-size: 1.1vw;
+}
+
+.small {
+    display: none;
+}
+
 table {
-    margin-top: 6%;
     width: 100%;
 }
 
@@ -17,68 +27,52 @@ td {
 }
 
 td h2 {
-    font-size: 2vh;
-    font-size: 2vw;
+    font-size: 1.2vh;
+    font-size: 1.2vw;
     text-align: center;
 }
 
-.smalltitle {
-    display: none;
-}
-
 .mass {
-    font-size: 1vh;
-    font-size: 1vw;
+    font-size: 0.8vh;
+    font-size: 0.8vw;
     text-align: right;
     margin: 2%;
 }
 
 .num {
-    font-size: 1vh;
-    font-size: 1vw;
+    font-size: 0.8vh;
+    font-size: 0.8vw;
     text-align: right;
     margin: 2%;
-}
-
-.small {
-    color: rgb(241, 101, 101);
-}
-
-.title {
-    text-align: center;
-    font-size: 4vw;
-    font-size: 4vh;
-    color: white;
 }
 
 .green{background-color: hsla(120, 37%, 47%, 0.507);}
 .greenmore{background-color: hsla(120, 38%, 18%, 0.507);}
 .grey{background-color: rgba(88, 88, 88, 0.603);}
+.cleargrey{background-color: rgba(145, 145, 145, 0.603);}
 .red{background-color: rgba(167, 70, 70, 0.616);}
+.pink{background-color: rgba(156, 95, 139, 0.616);}
 .salmon{background-color: rgba(172, 128, 128, 0.616);}
 .blue{background-color: rgba(70, 136, 167, 0.616);}
 .purple{background-color: rgba(108, 90, 138, 0.616);}
 .orange{background-color: rgba(168, 140, 78, 0.616);}
+.darkblue{background-color: rgba(37, 76, 94, 0.616);}
 
 .green:hover{background-color: hsla(120, 37%, 47%, 0.8);}
 .greenmore:hover{background-color: hsla(120, 38%, 18%, 0.8);}
 .grey:hover{background-color: rgba(88, 88, 88, 0.8);}
+.cleargrey:hover{background-color: rgba(145, 145, 145, 0.8);}
 .red:hover{background-color: rgba(167, 70, 70, 0.8);}
 .salmon:hover{background-color: rgba(172, 128, 128, 0.8);}
+.pink:hover{background-color: rgba(156, 95, 139, 0.8);}
 .blue:hover{background-color: rgba(70, 136, 167, 0.8);}
+.darkblue:hover{background-color: rgba(37, 76, 94, 0.8);}
 .purple:hover{background-color: rgba(108, 90, 138, 0.8);}
 .orange:hover {background-color: rgba(168, 140, 78, 0.8);} 
 
 @media screen and (min-width: 100px) and (max-width: 700px) {
-    .smalltitle {
-        text-align: center;
-        font-size: 4vw;
-        font-size: 4vh;
-        color: white;
-        display: block;
+    .small {
+        display: inline-block;
+        color: rgb(241, 101, 101);
     }
-
-    .title {
-        display: none;
-    }
-}
+}   
